--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,7 +6,7 @@
                 <h4>Как добавить свою тему</h4>
                 <div>Если вы хотите поделиться своей темой, сделайте следующее.</div>
                 <ul>
-                    <li>Создайте ответвление (fork) сайта <a href="#">jekyllthemes</a> на github.</li>
+                    <li>Создайте ответвление (fork) сайта <a href="#">jekyllthemes</a> на Github.</li>
                     <li>Создайте новый пост с расширение markdown в папке <code>_posts</code> и заполните соответствующие поля YAML. Пример заполнения полей:
                         <pre>
                             ---
