corrected some files

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -11,7 +11,7 @@
                         <pre>
                             ---
                             title: Mr.Brown
-                            date: 2017-04-04 00:00:00z
+                            date: 2017-04-04 00:00:00
                             thumbnail: mr-brown.jpg
                             author: Artem Sheludko
                             license: MIT
