--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -439,17 +439,14 @@ template {
 
 .highlight {
   background-color: #faf9f9;
-  -webkit-border-radius: 3px;
-          border-radius: 3px;
+  border: none;
+  padding: 12px;
   margin: 0;
 }
 
 .highlighter-rouge {
   color: #e74b3c;
   font-weight: 400;
-  border: 1px solid #607D8B;
-  -webkit-border-radius: 3px;
-          border-radius: 3px;
   padding: 0.1rem 0.5rem;
 }
 
