--- a/assets/css/sass/_syntax.scss
+++ b/assets/css/sass/_syntax.scss
@@ -1,4 +1,4 @@
-.highlight {background-color: #faf9f9; border: none; padding: 12px; margin: 0;}
+.highlight {background-color: #faf9f9; border: none; border-radius: 3px; padding: 12px; margin: 0;}
 .highlighter-rouge {color: #e74b3c; font-weight: 400; padding: 0.1rem 0.5rem;}
 .highlight .hll { background-color: #ffc; }
 .highlight .c { color: #999; } /* Comment */
