--- a/assets/css/sass/main.scss
+++ b/assets/css/sass/main.scss
@@ -50,6 +50,14 @@ pre {
   padding: 5px;
   border: #bbb 1px solid;
   background: #fff;
+
+  code {
+    padding: 0;
+    color: inherit;
+    white-space: pre-wrap;
+    background-color: transparent;
+    border: 0;
+  }
 }
 
 code {
