--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,6 +13,6 @@
     {% include footer.html %}
   </main>
   {% include analytics.html%}
-  {% include javascripts.html %}
+  {% include metrika.html %}
 </body>
 </html>
