--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,7 @@
     <div class="top" title="Top"><i class="fa fa-angle-double-up"></i></div>
     {% include footer.html %}
   </main>
-  {% include metrika.html%}
+  {% include analytics.html%}
   {% include javascripts.html %}
 </body>
 </html>
